# Prova

./: .gitignore  .wslconfig  IMPORTANT_NOTES.md  creator_secret.hex  invoke_m2.sh  redeploy_creator_badge.sh  run_manage.sh  skills-lock.json  test_rpc.ts
.agents/skills/: Concept.md  Context.md  Integration.md  Operation.md  crate.md  web3-hackathon-mindset.md
.claude/: M1.md  PRD.md
.github/workflows/: prove.yml
contracts/badge/: Cargo.toml
contracts/badge/contracts/badge/src/: lib.rs
contracts/creator-badge/: Cargo.toml  generate_m2_params.py
contracts/creator-badge/host/: Cargo.toml
contracts/creator-badge/host/src/: main.rs
contracts/creator-badge/methods/guest/: Cargo.toml
contracts/creator-badge/shared/: Cargo.toml
creator-badge/host/tests/: journal.rs
creator-badge/methods/guest/src/: main.rs
creator-badge/shared/src/: lib.rs
fixture/: image_id.hex  journal.hex  seal.hex
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/demo/: page.tsx
frontend/components/demo/: Particles.tsx  PrivateCard.tsx  PublicPanel.tsx  Wall.tsx  particles.css
frontend/components/effects/: DecryptedText.jsx  ScrollVelocity.jsx  ShapeGrid.jsx
frontend/components/landing/: Faq.tsx  FaqItem.tsx  Footer.tsx  FourChecks.tsx  Hero.tsx  HeroCTA.tsx  HeroTerminal.tsx  HeroText.tsx  HowItWorks.tsx  Navbar.tsx  ProtocolSection.tsx  ProtocolWithProva.tsx  ProtocolWithoutZK.tsx  Ticker.tsx  terminal-demo.tsx
frontend/components/ui/: terminal.tsx
frontend/lib/: config.ts  fixture.ts  prova.ts  stellar.ts
(+10 files in other folders)
